# launch_script

./: .gitignore  README.md  dummy_train.py  pyproject.toml  setup.py
.github/workflows/: test,yml
src/wandbize/: __init__.py  launch.py  parser.py
tests/: test_parser.py
